--- a/index.html
+++ b/index.html
@@ -8,9 +8,39 @@
   </head>
   <body>
     <main>
+
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
-		<div class="content-wrap"> 
+		<div class="content-wrap">
+			<nav>
+				
+<p>Home</p>
+	
+<p>About Me</p>			
+	
+<div class="dropdown">
+  <span>Services</span>
+  <div class="dropdown-content">
+    <p>Web Design</p>  
+	<p>Graphic Design</p>
+	<p>Logo Design</p>
+  </div>
+
+	<div class="dropdown">
+  <span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Work Experience</span>
+  <div class="dropdown-content">
+    <p>Relevant Work Experience</p>
+	<p>Other Work Experience</p>
+  </div>
+		
+	<div class="dropdown">
+  <span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Contact Me</span>
+  <div class="dropdown-content">
+    <p>Phone</p>
+	<p>Social Media</p>
+	<p>Contact Form</p>
+  </div>
+	</nav>
 			<h1>Bradley Thomas</h1>
 			<h2>Graphic Designer and Photographer</h2>
 
